--- a/bioimage_analyst_env.yml
+++ b/bioimage_analyst_env.yml
@@ -1,5 +1,10 @@
 name: bioimage_analyst_env
-
+channels:
+  - conda-forge
+  - https://conda.anaconda.org/gurobi
+  - bioconda
+  - r
+  - defaults
 dependencies:
   - bzip2=1.0.8=hcfcfb64_5
   - ca-certificates=2024.2.2=h56e8100_0
